<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clear"
        android:contentDescription="@string/clear"
        android:icon="@drawable/ic_clear"
        android:title="@string/clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/comment"
        android:contentDescription="@string/comment"
        android:icon="@drawable/ic_comment"
        android:title="@string/comment"
        app:showAsAction="always" />

    <item
        android:id="@+id/export"
        android:contentDescription="@string/export"
        android:icon="@drawable/ic_export"
        android:title="@string/export"
        app:showAsAction="always" />

    <item
        android:id="@+id/share"
        android:contentDescription="@string/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="always" />

</menu>